--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -13,44 +13,44 @@
  <div class="main">
     <form class="form1" id="form1ID" method="GET">
         <div class="set">
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves2.png"></div>
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves4.png"></div>
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves2.png"></div>
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves4.png"></div>
+            <div><img src="static/images/sleaves1.png"></div>
+            <div><img src="static/images/sleaves2.png"></div>
+            <div><img src="static/images/sleaves1.png"></div>
+            <div><img src="static/images/sleaves4.png"></div>
+            <div><img src="static/images/sleaves1.png"></div>
+            <div><img src="static/images/sleaves2.png"></div>
+            <div><img src="static/images/sleaves1.png"></div>
+            <div><img src="static/images/sleaves4.png"></div>
         </div>
 
 
         <div class="wavy">
-            <span style="--i:1; background-color:#f2f2eb ;color: #991d1f;">R</span>
-            <span style="--i:2;color: #991d1f;background-color:#f2f2eb ;">o</span>
-            <span style="--i:3;color: #991d1f;background-color:white ;">T</span>
-            <span style="--i:4;color: #991d1f;background-color:white ;">a</span>
-            <span style="--i:5;color: #991d1f;background-color:white ;"> </span>
-            <span style="--i:6;color: #991d1f;background-color:white ;">B</span>
-            <span style="--i:7;color: #991d1f;background-color:white ;">i</span>
-            <span style="--i:8;color: #991d1f;background-color:white ;">z</span>
-            <span style="--i:9;color: #991d1f;background-color:white ;">d</span>
-            <span style="--i:10;color: #991d1f;background-color:white ;">e</span>
-            <span style="--i:11;color: #991d1f;background-color:white ;">n</span>
-            <span style="--i:12;color: #991d1f;background-color:white ;"> </span>
-            <span style="--i:13;color: #991d1f;background-color:white ;">G</span>
-            <span style="--i:14;color: #991d1f;background-color:white ;">e</span>
-            <span style="--i:15;color: #991d1f;background-color:white ;">Z</span>
-            <span style="--i:16;color: #991d1f;background-color:white ;">M</span>
-            <span style="--i:17;color: #991d1f;background-color:white ;">e</span>
-            <span style="--i:18;color: #991d1f;background-color:white ;">S</span>
-            <span style="--i:19;color: #991d1f;background-color:white ;">i</span>
-            <span style="--i:20;color: #991d1f;background-color:white ;"> </span>
-            <span style="--i:21;color: #991d1f;background-color:white ;">S</span>
-            <span style="--i:22;color: #991d1f;background-color:white ;">e</span>
-            <span style="--i:23;color: #991d1f;background-color:white ;">N</span>
-            <span style="--i:24;color: #991d1f;background-color:white ;">D</span>
-            <span style="--i:25;color: #991d1f;background-color:white ;">e</span>
-            <span style="--i:26;color: #991d1f;background-color:white ;">N</span>
+            <span style="--i:1; color: #991d1f;">R</span>
+            <span style="--i:2;color: #991d1f;">o</span>
+            <span style="--i:3;color: #991d1f;">t</span>
+            <span style="--i:4;color: #991d1f;">a</span>
+            <span style="--i:5;color: #991d1f;"> </span>
+            <span style="--i:6;color: #991d1f;">B</span>
+            <span style="--i:7;color: #991d1f;">i</span>
+            <span style="--i:8;color: #991d1f;">z</span>
+            <span style="--i:9;color: #991d1f;">d</span>
+            <span style="--i:10;color: #991d1f;">e</span>
+            <span style="--i:11;color: #991d1f;">n</span>
+            <span style="--i:12;color: #991d1f;"> </span>
+            <span style="--i:13;color: #991d1f;">G</span>
+            <span style="--i:14;color: #991d1f;">e</span>
+            <span style="--i:15;color: #991d1f;">z</span>
+            <span style="--i:16;color: #991d1f;">m</span>
+            <span style="--i:17;color: #991d1f;">e</span>
+            <span style="--i:18;color: #991d1f;">s</span>
+            <span style="--i:19;color: #991d1f;">i</span>
+            <span style="--i:20;color: #991d1f;"> </span>
+            <span style="--i:21;color: #991d1f;">S</span>
+            <span style="--i:22;color: #991d1f;">e</span>
+            <span style="--i:23;color: #991d1f;">n</span>
+            <span style="--i:24;color: #991d1f;">d</span>
+            <span style="--i:25;color: #991d1f;">e</span>
+            <span style="--i:26;color: #991d1f;">n</span>
         </div>
 
 
