firstPage calisma v4 ( il ve yakin mesafe degistirildi)

--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -62,7 +62,7 @@
             </label>
         </div>
 
-          <input style="background-color: #FFFFFF" class="searchinput" id="searchArea" name="lastname" type="text" align="center" placeholder="Km Giriniz...">
+          <input style="background-color: #FFFFFF" class="searchinput" id="searchArea" name="lastname" type="text" align="center" placeholder="Şehir İsmini Giriniz...">
           <button type="submit" formaction="{% url 'detail' %}"  style="position:relative;" id="searchButton">Ara</button>
 
           <script src="{% static 'script/allScript.js' %}"></script>
